@@ -17,6 +17,10 @@ Server:
 	* Fix unpause when baselessPausing is on.
 	* Improved signal handling.
 
+Client:
+	* Improved ball message scan.  Clear color attributes of
+	  out-of-date ball messages.
+
 XPilot NG XP-Replay:
 	* Disable some code in color allocation function, it breaks certain
 	  recordings.
